--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "silex/silex": "~1.0@dev",
         "stack/stack": "~1.0@dev",
+        "stack/callable-http-kernel": "~1.0@dev",
         "symfony/browser-kit": "~2.1"
     },
     "autoload": {
